// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemTitle when children is a Component should match ItemTitle component 1`] = `
<p
  className="title"
>
  <h1>
    Component
  </h1>
</p>
`;

exports[`ItemTitle when children is a string should match ItemTitle component 1`] = `
<p
  className="title"
>
  Title
</p>
`;
